# agfs

./: .gitignore  README.md
.github/workflows/: daily-build.yml  test.yml
agfs-fuse/cmd/agfs-fuse/: main.go
agfs-fuse/pkg/fusefs/: file.go  handles.go  node.go
agfs-sdk/go/: client.go
agfs-sdk/python/pyagfs/: client.py
agfs-server/: Dockerfile  README.md  config.example.yaml  docker-entrypoint.sh
agfs-server/cmd/server/: main.go
agfs-server/examples/agfs-wasm-ffi/: Cargo.toml
agfs-server/examples/agfs-wasm-ffi/src/: ffi.rs  filesystem.rs  lib.rs  macros.rs  types.rs
agfs-server/examples/hackernewsfs-wasm/src/: lib.rs
agfs-server/examples/hellofs-c/: hellofs.c
agfs-server/examples/hellofs-rust/agfs-ffi/: Cargo.toml
agfs-server/examples/hellofs-rust/agfs-ffi/src/: ffi.rs  filesystem.rs  lib.rs  types.rs
agfs-server/pkg/filesystem/: handle_manager.go  handle_manager_test.go
agfs-server/pkg/handlers/: handle_handlers.go  handlers.go
agfs-server/pkg/mountablefs/: mountablefs.go
agfs-shell/: README.md  build.py  pyproject.toml
agfs-shell/agfs_shell/: __init__.py  builtins.py  cli.py  completer.py  expression.py  filesystem.py  http_client.py  job_manager.py  lexer.py  parser.py  pipeline.py  process.py  shell.py  webapp_server.py
agfs-shell/agfs_shell/commands/: __init__.py  alias.py  fsgrep.py  http.py  llm.py  pwd.py  read.py  unalias.py
agfs-shell/examples/: cowsay.as  enqueue_task.as  task_queue_worker.as
agfs-shell/webapp/src/: App.css  App.jsx
agfs-shell/webapp/src/components/: Editor.jsx  FileTree.jsx  Terminal.jsx
(+32 files in other folders)
