[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agfs-shell"
version = "1.1.2"
description = "Experimental shell with Unix-style pipeline support"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "agfs authors" }
]
dependencies = [
    "pyagfs",
    "rich",
    "jq",
]

[project.optional-dependencies]
webapp = [
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.7.0",
]

[tool.uv.sources]
pyagfs = { path = "../agfs-sdk/python", editable = true }

[project.scripts]
agfs-shell = "agfs_shell.cli:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["agfs_shell"]
